--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,4 @@
 VITE_AUTH0_DOMAIN=dev-4hkjwpncpz07m6tu.au.auth0.com
 VITE_AUTH0_CLIENT_ID=n21oCD78GVgOXAWmvszoriVNbKzWsygl
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173/
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173
+VITE_API_BASE_URL=http://localhost:7000
